<?xml version="1.0"?>
<package format="2">
  <name>dyn_reconf_shadow</name>
  <version>1.0.0</version>
  <description>Sync dynamic reconfigure parameters by AWS IoT ThingShadow</description>

  <maintainer email="sugiura@whill.jp">Hikaru Sugiura</maintainer>


  <license>MIT</license>


  <!-- <url type="website">http://wiki.ros.org/ros_awsiot_thingshadow</url> -->


  <author email="sugiura@whill.jp">Hikaru Sugiura</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend> 

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <exec_depend>awsiotpythonsdk-pip</exec_depend>    <!-- AWS IoT SDK -->

  <export>

  </export>
</package>
